<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (C) 2013  Daniel Mehrmann (Akusari)

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="150dip"
        android:padding="10dip" >

        <TableLayout
            android:id="@+id/dlg_info_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/dlg_card_info_name_label"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>

                <TextView
                    android:id="@+id/dlg_info_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/dlg_card_info_part_label"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>

                <TextView
                    android:id="@+id/dlg_info_part"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/dlg_card_info_cache_label"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>

                <TextView
                    android:id="@+id/dlg_info_cache"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/dlg_card_info_date_label"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>

                <TextView
                    android:id="@+id/dlg_info_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/dlg_card_info_serial_label"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>

                <TextView
                    android:id="@+id/dlg_info_serial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:textColor="#F2F2F2"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:typeface="sans" >
                </TextView>
            </TableRow>
        </TableLayout>
    </ScrollView>
    
    <View
        android:id="@+id/divider"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dip"
        android:background="#A4A4A4" >
    </View>
      
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dip"
        android:layout_marginTop="5dip"
        android:layout_marginBottom="10dip" >

        <ImageView
            android:id="@+id/dlg_info_btn_ok"
            android:layout_width="80dip"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:src="@drawable/accept"
            android:background="@drawable/button_selector_green" >
        </ImageView>
    </RelativeLayout>
</LinearLayout>